# screen-composer-c

./: .clang-format  .editorconfig  .gitmodules  LICENSE  README.md  config.h.in  config.ini  main.c  meson.build  sc_keyboard.c  sc_layer_view.c  sc_output.c  sc_output_repaintdelay.c  sc_toplevel_view.c  sc_view.c  sc_workspace.c  screencomposer.c  screencomposer_backend.c  screencomposer_renderer.c
compositor/: backend.c  compositor.c  cursor.c  keyboard.c  layer_shell.c  workspace.c  xdg_shell.c
doc/: animation.md  output-repaint.md  rendering.md
include/: gles2_renderer.h  log.h  sc-layer-shell-animation.h  sc-layer-shell-layer.h  sc-layer-shell-timing.h  sc-layer-shell.h  sc_compositor.h  sc_compositor_backend.h  sc_compositor_cursor.h  sc_compositor_keyboard.h  sc_compositor_layercompositor.h  sc_compositor_layershell.h  sc_compositor_renderer.h  sc_compositor_rendering.h  sc_compositor_seat.h  sc_compositor_workspace.h  sc_compositor_xdgshell.h  sc_config.h  sc_fbo.h  sc_geometry.h  sc_keyboard.h  sc_layer_view.h  sc_output.h  sc_output_repaintdelay.h  sc_popup_view.h  sc_shader.h  sc_skia.h  sc_toplevel_view.h  sc_view.h  sc_wlr_layer_view.h  sc_workspace.h  screencomposer.h  screencomposer_renderer.h  skia.hpp  utils.h
output/: output.c  repaintdelay.c
protocols/: sc-layer-unstable-v1.xml  sc-layer-v1.html  style.css
shaders/: blendTranslucent.frag  blur.frag  roundrect.frag  roundrect.vert  shader.frag  textureExternal.frag  textureRGBA.frag  textureRGBA.vert  textureRGBX.frag
src/: config.c  keyboard.c  main.c  sc_config.c  sc_keyboard.c  workspace.c
src/compositor/: backend.c  compositor.c  cursor.c  keyboard.c  renderer.c  rendering.c  sc_layer_shell.c  seat.c  skia.cpp  wlr_layer_shell.c  workspace.c  xdg_shell.c
src/gles2/: fbo.c  renderer.c  shader.c
src/layers-composer/: animation.c  filter.c  layer-shell-animation.c  layer-shell-layer.c  layer-shell.c  layer.c  serialize.c  shell.c  timing-function.c
src/layers-composer/animation/: basic.c  timing-function.c
src/output/: damage.c  output.c  repaintdelay.c  utils.c  view_iterators.c
src/utils/: bezier.c  file.c  timespec.c
src/view/: popup_view.c  sc_layer_view.c  sc_popup_view.c  sc_toplevel_view.c  sc_view.c  toplevel_view.c  view.c  wlr_layer_view.c
subprojects/: depot_tools.wrap  skia.wrap
subprojects/packagefiles/depot_tools/: meson.build
subprojects/packagefiles/skia/: args.gn  build_skia.sh  meson.build
test/: example_file.txt  meson.build  output_utils_box.c  output_utils_intersect_view.c  utils_bezier.c  utils_file.c
view/: sc_layer_view.c  sc_toplevel_view.c  sc_view.c
